--- a/style-rtl.css
+++ b/style-rtl.css
@@ -3104,12 +3104,21 @@ body.page .main-navigation {
 
 .entry .entry-content > *.alignfull,
 .entry .entry-summary > *.alignfull {
-  margin-top: calc(2 * 1rem);
-  margin-bottom: calc(2 * 1rem);
   position: relative;
-  right: calc( -12.5% - 75px);
-  width: calc( 125% + 150px);
-  max-width: calc( 125% + 150px);
+  right: -1rem;
+  width: calc( 100vw + (2 * 1rem));
+  max-width: calc( 100vw + (2 * 1rem));
+}
+
+@media only screen and (min-width: 768px) {
+  .entry .entry-content > *.alignfull,
+  .entry .entry-summary > *.alignfull {
+    margin-top: calc(2 * 1rem);
+    margin-bottom: calc(2 * 1rem);
+    right: calc( -12.5% - 75px);
+    width: calc( 125% + 150px);
+    max-width: calc( 125% + 150px);
+  }
 }
 
 .entry .entry-content > *.alignleft,
@@ -3484,8 +3493,13 @@ body.page .main-navigation {
 
 .entry .entry-content .wp-block-image.alignfull img {
   width: 100vw;
-  margin-right: auto;
-  margin-left: auto;
+}
+
+@media only screen and (min-width: 768px) {
+  .entry .entry-content .wp-block-image.alignfull img {
+    margin-right: auto;
+    margin-left: auto;
+  }
 }
 
 .entry .entry-content .wp-block-cover-image .wp-block-cover-image-text,
@@ -3568,6 +3582,18 @@ body.page .main-navigation {
   position: absolute;
   transform: translate(50%, -50%);
   top: 50%;
+}
+
+.entry .entry-content .wp-block-cover-image.alignfull,
+.entry .entry-content .wp-block-cover.alignfull {
+  width: 100%;
+}
+
+@media only screen and (min-width: 768px) {
+  .entry .entry-content .wp-block-cover-image.alignfull,
+  .entry .entry-content .wp-block-cover.alignfull {
+    width: calc( 125% + 150px);
+  }
 }
 
 .entry .entry-content .wp-block-cover-image.has-left-content,
