--- a/style.css
+++ b/style.css
@@ -1138,26 +1138,12 @@ body.page .main-navigation {
   width: calc( 100vw - 2rem);
 }
 
-.main-navigation .main-menu .menu-item-has-children[focus-within] > .sub-menu {
-  display: block;
-  left: 0;
-  margin-top: 0;
-  opacity: 1;
-  width: calc( 100vw - 2rem);
-}
-
 .main-navigation .main-menu .menu-item-has-children:focus-within > .sub-menu {
   display: block;
   left: 0;
   margin-top: 0;
   opacity: 1;
   width: calc( 100vw - 2rem);
-}
-
-.main-navigation .main-menu .menu-item-has-children[focus-within] > .sub-menu .sub-menu {
-  margin-top: inherit;
-  position: relative;
-  padding-left: 1rem;
 }
 
 .main-navigation .main-menu .menu-item-has-children[focus-within] > .sub-menu .sub-menu {
@@ -1173,13 +1159,6 @@ body.page .main-navigation {
 }
 
 @media only screen and (min-width: 768px) {
-  .main-navigation .main-menu .menu-item-has-children[focus-within] > .sub-menu .sub-menu {
-    padding-left: 0;
-    position: absolute;
-    left: 100%;
-    width: max-content;
-    top: 0;
-  }
   .main-navigation .main-menu .menu-item-has-children[focus-within] > .sub-menu .sub-menu {
     padding-left: 0;
     position: absolute;
@@ -3149,12 +3128,21 @@ body.page .main-navigation {
 
 .entry .entry-content > *.alignfull,
 .entry .entry-summary > *.alignfull {
-  margin-top: calc(2 * 1rem);
-  margin-bottom: calc(2 * 1rem);
   position: relative;
-  left: calc( -12.5% - 75px);
-  width: calc( 125% + 150px);
-  max-width: calc( 125% + 150px);
+  left: -1rem;
+  width: calc( 100vw + (2 * 1rem));
+  max-width: calc( 100vw + (2 * 1rem));
+}
+
+@media only screen and (min-width: 768px) {
+  .entry .entry-content > *.alignfull,
+  .entry .entry-summary > *.alignfull {
+    margin-top: calc(2 * 1rem);
+    margin-bottom: calc(2 * 1rem);
+    left: calc( -12.5% - 75px);
+    width: calc( 125% + 150px);
+    max-width: calc( 125% + 150px);
+  }
 }
 
 .entry .entry-content > *.alignleft,
@@ -3534,8 +3522,13 @@ body.page .main-navigation {
 
 .entry .entry-content .wp-block-image.alignfull img {
   width: 100vw;
-  margin-left: auto;
-  margin-right: auto;
+}
+
+@media only screen and (min-width: 768px) {
+  .entry .entry-content .wp-block-image.alignfull img {
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 .entry .entry-content .wp-block-cover-image .wp-block-cover-image-text,
@@ -3618,6 +3611,18 @@ body.page .main-navigation {
   position: absolute;
   transform: translate(-50%, -50%);
   top: 50%;
+}
+
+.entry .entry-content .wp-block-cover-image.alignfull,
+.entry .entry-content .wp-block-cover.alignfull {
+  width: 100%;
+}
+
+@media only screen and (min-width: 768px) {
+  .entry .entry-content .wp-block-cover-image.alignfull,
+  .entry .entry-content .wp-block-cover.alignfull {
+    width: calc( 125% + 150px);
+  }
 }
 
 .entry .entry-content .wp-block-cover-image.has-left-content,
